--- a/package.json
+++ b/package.json
@@ -53,11 +53,13 @@
     "gpu.js": "^2.15.2"
   },
   "devDependencies": {
-    "gpu.js": "^2.15.2",
+    "@types/d3": "^7.1.0",
     "@types/node": "^17.0.23",
     "@types/react": "^17.0.33",
     "@types/react-dom": "^17.0.10",
     "@vitejs/plugin-react": "^1.0.7",
+    "d3": "^7.4.4",
+    "gpu.js": "^2.15.2",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "tslib": "^2.3.1",
