--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "author": "Yanming Xu <xymzhs@gmail.com>",
   "name": "tstorch",
-  "description": "Dynamic tensor computations with automatic differentiation and GPU acceleration with JavaScript",
+  "description": "Dynamic computations with automatic differentiation and webGPU acceleration with JavaScript",
   "files": [
     "dist"
   ],
@@ -58,6 +58,7 @@
     "@types/react": "^17.0.33",
     "@types/react-dom": "^17.0.10",
     "@vitejs/plugin-react": "^1.0.7",
+    "@webgpu/types": "^0.1.19",
     "d3": "^7.4.4",
     "gpu.js": "^2.15.2",
     "react": "^18.0.0",
