--- a/package.json
+++ b/package.json
@@ -49,9 +49,7 @@
     "build": "tsc && vite build",
     "preview": "vite preview"
   },
-  "peerdependencies": {
-    "gpu.js": "^2.15.2"
-  },
+  "peerdependencies": {},
   "devDependencies": {
     "@types/d3": "^7.1.0",
     "@types/node": "^17.0.23",
@@ -60,7 +58,6 @@
     "@vitejs/plugin-react": "^1.0.7",
     "@webgpu/types": "^0.1.19",
     "d3": "^7.4.4",
-    "gpu.js": "^2.15.2",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "tslib": "^2.3.1",
